<resources>
    <string name="app_name">Trim</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="landing">Welcome to</string>
    <string name="landing2">TRIM</string>

    <!--Login Register Activity-->
    <string name="login_title">Login</string>
    <string name="reg_title">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dont_have">Don\'t Have Account ? Register.</string>
    <string name="already_have">Already Have an Account ? Login.</string>

    <!--Validation message-->
    <string name="username_empty">Username is required</string>
    <string name="username6">Username min. 6 char</string>
    <string name="email_notmatch">Email doesn\'t match format</string>
    <string name="email_empty">Email is required</string>
    <string name="password_empty">Password is required</string>
    <string name="password8">Password min. 8 char</string>

    <string name="please_wait">Loading ..</string>
    <string name="success">Successful</string>
    <string name="success_message">Registration successful, please login</string>
    <string name="success1_message">Login successful, please login</string>
    <string name="failed">Failed</string>
    <string name="failed_message">Registration failed, please try again</string>
    <string name="failed1_message">Login failed, please try again</string>

    <!--Alert-->
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure want to logout ?</string>
    <string name="alert">Alert</string>
    <string name="back_alert">Are you sure want to exit ? Your change will not save</string>
    <string name="yes_option">Yes</string>
    <string name="cancel_option">Cancel</string>
    <string name="del">Delete</string>
    <string name="del_message">Are you sure want to delete note ?</string>
    <string name="del_success">Note deleted</string>

    <!--Menu-->
    <string name="signin_as">Sign in as</string>
    <string name="home">Home</string>
    <string name="todolist">To-Do List</string>
    <string name="money">Money Management</string>
    <string name="notes">Notes</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="signout">Logout</string>

    <!--Add/Edit Note Activity-->
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="content">Content</string>
    <string name="charac">Character</string>
    <string name="not_saved">Item not saved</string>
    <string name="note_saved">Note saved</string>
    <string name="edit_note">Edit Note</string>
    <string name="no_notes">NO ITEM YET</string>
    <string name="plus_note">Tap on + button to add a note</string>

    <!--Add/Edit Todolist Activity-->
    <string name="add_todo">Add To-Do List</string>
    <string name="edit_todo">Edit To-Do List</string>
    <string name="what_msg">What to do</string>
    <string name="todo_detail">Detail / Description</string>
    <string name="when_msg">When will be done</string>
    <string name="todo_saved">Item saved</string>
    <string name="mark_done">Mark as Done</string>
    <string name="done">Task Done</string>
    <string name="plus_todo">Tap on + button to add a list</string>

    <!--Home Fragment-->
    <string name="welcome">Welcome,</string>
    <string name="you_have">You have</string>

    <!--About-->
    <string name="about1">
        TRIM was made for fulfill the assignment
        of Mobile Programming lesson in Telkom School Malang.
        Offering notes and to-do list features that saves online.
    </string>
    <string name="about2">Thanks To</string>
    <string name="about3">Allah SWT || Parents || Teacher of SMK Telkom Malang || Stackoverflow</string>

    <!--Intro Slider-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Notes</string>
    <string name="slide_1_desc">Note what you need</string>

    <string name="slide_2_title">To-Do List</string>
    <string name="slide_2_desc">Make a list of your activities</string>

    <string name="slide_3_title">Online Database</string>
    <string name="slide_3_desc">Your data is save even if switching device</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team">Team</string>

</resources>
