<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_user"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="id.sch.smktelkom_mlg.project2.xirpl50413212734.trim.LoginActivity">

    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="100dp"
        android:padding="4dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="5dp"
            android:src="@drawable/ic_mail_outline_black_24dp" />

        <EditText
            android:id="@+id/editTextLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/et_outline"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="11dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="5dp"
            android:src="@drawable/ic_lock_outline_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etLogPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/et_outline"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="11dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_bg"
        android:text="@string/login_title" />

    <TextView
        android:id="@+id/textViewGoRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/dont_have"
        android:textAlignment="center" />

</LinearLayout>
